testsuite/tests/builtins/stream_methods/all/non_function_predicate/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(s.all("Not a function"))
   │       ───────────┬───────────  
   │                  ╰───────────── Expecting a "Function" for the parameter "predicate", got a "Str"
───╯
